fixed issue with profile photo not showing. updated user profile model

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .main-bg {
-    background-color: #ffffff);
+    background-color: #ffffff;
 }
 
 /* Card */
